--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         <a class="mr-5 hover:text-white" href="index.html">Home</a>
         <a class="mr-5 hover:text-white" href="tech.html">Technology</a>
         <a class="mr-5 hover:text-white" href="ed.html">Education</a>
-        <a class="mr-5 hover:text-white" href="pol.html">Faculty</a>Polittics</a>
+        <a class="mr-5 hover:text-white" href="pol.html">Polittics</a>
         <a class="mr-5 hover:text-white" href="sport.html">Sports</a>
         
       </nav>
@@ -35,134 +35,51 @@
     </div>
   </header>
 
-<!--Carousel-->
 
-<div id="carouselExampleCaptions" class="carousel slide relative" data-bs-ride="carousel">
-    <div class="carousel-indicators absolute right-0 bottom-0 left-0 flex justify-center p-0 mb-4">
-      <button
-        type="button"
-        data-bs-target="#carouselExampleCaptions"
-        data-bs-slide-to="0"
-        class="active"
-        aria-current="true"
-        aria-label="Slide 1"
-      ></button>
-      <button
-        type="button"
-        data-bs-target="#carouselExampleCaptions"
-        data-bs-slide-to="1"
-        aria-label="Slide 2"
-      ></button>
-      <button
-        type="button"
-        data-bs-target="#carouselExampleCaptions"
-        data-bs-slide-to="2"
-        aria-label="Slide 3"
-      ></button>
-    </div>
-    <div class="carousel-inner relative w-full overflow-hidden">
-      <div class="carousel-item active relative float-left w-full">
-        <img
-          src="https://mdbootstrap.com/img/Photos/Slides/img%20(15).jpg"
-          class="block w-full"
-          alt="..."
-        />
-        <div class="carousel-caption hidden md:block absolute text-center">
-          <h5 class="text-xl">First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item relative float-left w-full">
-        <img
-          src="https://mdbootstrap.com/img/Photos/Slides/img%20(22).jpg"
-          class="block w-full"
-          alt="..."
-        />
-        <div class="carousel-caption hidden md:block absolute text-center">
-          <h5 class="text-xl">Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item relative float-left w-full">
-        <img
-          src="https://mdbootstrap.com/img/Photos/Slides/img%20(23).jpg"
-          class="block w-full"
-          alt="..."
-        />
-        <div class="carousel-caption hidden md:block absolute text-center">
-          <h5 class="text-xl">Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
-      </div>
-    </div>
-    <button
-      class="carousel-control-prev absolute top-0 bottom-0 flex items-center justify-center p-0 text-center border-0 hover:outline-none hover:no-underline focus:outline-none focus:no-underline left-0"
-      type="button"
-      data-bs-target="#carouselExampleCaptions"
-      data-bs-slide="prev"
-    >
-      <span class="carousel-control-prev-icon inline-block bg-no-repeat" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button
-      class="carousel-control-next absolute top-0 bottom-0 flex items-center justify-center p-0 text-center border-0 hover:outline-none hover:no-underline focus:outline-none focus:no-underline right-0"
-      type="button"
-      data-bs-target="#carouselExampleCaptions"
-      data-bs-slide="next"
-    >
-      <span class="carousel-control-next-icon inline-block bg-no-repeat" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
+
 
 
   <!---Content-->
-
-  <section class="text-gray-400 bg-gray-900 body-font">
-    <div class="container px-5 py-24 mx-auto">
-      
-      <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
-        <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
-            <div class="rounded-lg h-64 overflow-hidden">
-                <div class="relative overflow-hidden bg-no-repeat bg-cover max-w-xs">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/fluid/city/113.webp" class="max-w-xs hover:scale-110 transition duration-300 ease-in-out" alt="Louvre" />
-            </div></div>
-          <h2 class="text-xl font-medium title-font text-white mt-5">Shooting Stars</h2>
-          <p class="text-base leading-relaxed mt-2">Swag shoindxgoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
-          <a class="text-indigo-400 inline-flex items-center mt-3">Learn More
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-              <path d="M5 12h14M12 5l7 7-7 7"></path>
-            </svg>
-          </a>
+  <section class="overflow-hidden text-gray-700">
+    <div class="container px-5 py-2 mx-auto lg:pt-24 lg:px-32">
+      <div class="flex flex-wrap -m-1 md:-m-2">
+        <div class="flex flex-wrap w-1/2">
+          <div class="w-1/2 p-1 md:p-2">
+            <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+              src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(70).webp">
+          </div>
+          <div class="w-1/2 p-1 md:p-2">
+            <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+              src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(72).webp">
+          </div>
+          <div class="w-full p-1 md:p-2">
+            <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+              src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp">
+          </div>
         </div>
-        <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
-            <div class="rounded-lg h-64 overflow-hidden">
-                <div class="relative overflow-hidden bg-no-repeat bg-cover max-w-xs">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/fluid/city/113.webp" class="max-w-xs hover:scale-110 transition duration-300 ease-in-out" alt="Louvre" />
-              </div></div>
-          <h2 class="text-xl font-medium title-font text-white mt-5">The Catalyzer</h2>
-          <p class="text-base leading-relaxed mt-2">Swag shoindxigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
-          <a class="text-indigo-400 inline-flex items-center mt-3">Learn More
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-              <path d="M5 12h14M12 5l7 7-7 7"></path>
-            </svg>
-          </a>
-        </div>
-        <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
-            <div class="rounded-lg h-64 overflow-hidden">
-                <div class="relative overflow-hidden bg-no-repeat bg-cover max-w-xs">
-                <img src="https://mdbcdn.b-cdn.net/img/new/fluid/city/113.webp" class="max-w-xs hover:scale-110 transition duration-300 ease-in-out" alt="Louvre" />
-              </div></div>
-          <h2 class="text-xl font-medium title-font text-white mt-5">The 400 Blows</h2>
-          <p class="text-base leading-relaxed mt-2">Swag shoindegoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
-          <a class="text-indigo-400 inline-flex items-center mt-3">Learn More
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-              <path d="M5 12h14M12 5l7 7-7 7"></path>
-            </svg>
-          </a>
+        <div class="flex flex-wrap w-1/2">
+          <div class="w-full p-1 md:p-2">
+            <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+              src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(74).webp">
+          </div>
+          <div class="w-1/2 p-1 md:p-2">
+            <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+              src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(75).webp">
+          </div>
+          <div class="w-1/2 p-1 md:p-2">
+            <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+              src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(77).webp">
+          </div>
         </div>
       </div>
     </div>
+  </section>
+
+  <section>
+    <br>
+    <br>
+    <br>
+    <br>
   </section>
 
 
