--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     
-    <!-- header section -->
+<!--Header starts -->
 
     <header>
-        <a href="#" class="logo"><i class="fas fa-newspaper"></i> MEMEws</a> 
+        <a href="#header" class="logo"><i class="fas fa-newspaper"></i> MEMEws</a> 
         <nav class="navbar">
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
@@ -35,69 +35,72 @@
             <div class="content">
                 <h1>Memews - The Innovative and Modern Newsletter</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, iusto voluptatibus numquam dolorem sunt ullam cum eligendi accusantium nam molestias est magnam repudiandae delectus exercitationem vero voluptas dignissimos autem consectetur.</p>
-                <div class="more-button"><a href="explore.html">Explore Memews</a></div>
+                <div class="more-button"><a href="#content">Explore Memews</a></div>
             </div>
         </div>
 
     </main>
+<!--Header ends-->
 
-      <!---Content-->
-<section class="overflow-hidden text-gray-700">
+<!---Content Starts-->
+<section  id ="content" class="overflow-hidden text-gray-700" >
     <div class="container px-5 py-2 mx-auto lg:pt-24 lg:px-32">
       <div class="flex flex-wrap -m-1 md:-m-2">
         <div class="flex flex-wrap w-1/2">
           <div class="w-1/2 p-1 md:p-2">
             <img alt="gallery" class="hover:scale-125 transition-all duration-500 cursor-pointer"
-              src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(70).webp" >
+              src="https://pbs.twimg.com/media/Fi-6HLPXwAUHPW3?format=jpg&name=4096x4096" >
           </div>
           <div class="w-1/2 p-1 md:p-2">
             <img alt="gallery" class="hover:scale-125 transition-all duration-500 cursor-pointer"
-              src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(72).webp">
+              src="https://pbs.twimg.com/media/Fi0aAtIXgAIVuT_?format=jpg&name=4096x4096">
           </div>
           <div class="w-full p-1 md:p-2">
             <img alt="gallery" class="hover:scale-125 transition-all duration-500 cursor-pointer"
-              src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp">
+              src="https://pbs.twimg.com/media/Fi5xYFuaUAIWeW5?format=jpg&name=medium">
           </div>
         </div>
         <div class="flex flex-wrap w-1/2">
           <div class="w-full p-1 md:p-2">
             <img alt="gallery" class="hover:scale-125 transition-all duration-500 cursor-pointer"
-              src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(74).webp">
+              src="https://pbs.twimg.com/media/FiBkFH6WAAEaVjK?format=jpg&name=900x900">
           </div>
           <div class="w-1/2 p-1 md:p-2">
             <img alt="gallery" class="hover:scale-125 transition-all duration-500 cursor-pointer"
-              src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(75).webp">
+              src="https://pbs.twimg.com/media/FjJPxfLXoAEprE_?format=jpg&name=large">
           </div>
           <div class="w-1/2 p-1 md:p-2">
             <img alt="gallery" class="hover:scale-125 transition-all duration-500 cursor-pointer"
-              src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(77).webp">
+              src="https://pbs.twimg.com/media/FjI17KQXwAMNod1?format=jpg&name=large">
           </div>
         </div>
       </div>
     </div>
   </section>
+<!---Content Ends-->
+
+<!--Meet the team-->
   
-  <!--Feedback-->
+  
+<!--Feedback-->
   <section class="text-gray-100 body-font relative">
     <div class="container px-5 py-24 mx-auto flex sm:flex-nowrap flex-wrap">
       <div class="lg:w-2/3 md:w-1/2 bg-gray-900 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative">
-        <iframe width="100%" height="100%" title="map" class="absolute inset-0" frameborder="0" marginheight="0" marginwidth="0" scrolling="no" src="https://maps.google.com/maps?width=100%&height=600&hl=en&q=%C4%B0zmir+(My%20Business%20Name)&ie=UTF8&t=&z=14&iwloc=B&output=embed" style="filter: grayscale(1) contrast(1.2) opacity(0.16);"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3671.616901114066!2d72.5070831!3d23.0378344!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e9b5a986f7dd7%3A0x2b9345c3f13c7158!2sNew%20L%20J%20Institute%20of%20Engineering%20%26%20Technology!5e0!3m2!1sen!2sin!4v1670293535040!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="bg-gray-900 relative flex flex-wrap py-6 rounded shadow-md">
           <div class="lg:w-1/2 px-6">
             <h2 class="title-font font-semibold text-white tracking-widest text-xs">ADDRESS</h2>
-            <p class="mt-1">Photo booth tattooed prism, portland taiyaki hoodie neutra typewriter</p>
+            <p class="mt-1">NLJIET, Nr. Rajpath Club,<br>Sindhubhavan, Ahmedabad<br>380015</p>
           </div>
           <div class="lg:w-1/2 px-6 mt-4 lg:mt-0">
             <h2 class="title-font font-semibold text-white tracking-widest text-xs">EMAIL</h2>
-            <a class="text-purple-400 leading-relaxed">example@email.com</a>
-            <h2 class="title-font font-semibold text-white tracking-widest text-xs mt-4">PHONE</h2>
-            <p class="leading-relaxed">123-456-7890</p>
+            <a class="text-purple-400 leading-relaxed">123@gmail.com</a>
           </div>
         </div>
       </div>
       <div class="lg:w-1/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
         <h2 class="text-white text-lg mb-1 font-medium title-font">Feedback</h2>
-        <p class="leading-relaxed mb-5">Post-ironic portland shabby chic echo park, banjo fashion axe</p>
+        <p class="leading-relaxed mb-5"></p>
         <div class="relative mb-4">
           <label for="name" class="leading-7 text-sm text-gray-400">Name</label>
           <input type="text" id="name" name="name" class="w-full bg-gray-800 rounded border border-gray-700 focus:border-purple-500 focus:ring-2 focus:ring-purple-900 text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
@@ -110,13 +113,15 @@
           <label for="message" class="leading-7 text-sm text-gray-400">Message</label>
           <textarea id="message" name="message" class="w-full bg-gray-800 rounded border border-gray-700 focus:border-purple-500 focus:ring-2 focus:ring-purple-900 h-32 text-base outline-none text-gray-100 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
         </div>
-        <button class="text-white bg-purple-900 border-0 py-2 px-6 focus:outline-none rounded text-lg">Button</button>
-        <p class="text-xs text-gray-400 text-opacity-90 mt-3">Chicharrones blog helvetica normcore iceland tousled brook viral artisan.</p>
+        <button class="text-white bg-purple-900 border-0 py-2 px-6 focus:outline-none rounded text-lg">Submit</button>
+        <p class="text-xs text-gray-400 text-opacity-90 mt-3">We will reach back to you in 24 hours or less.</p>
       </div>
     </div>
   </section>
+<!---Feedbck Ends--->
 
-    <footer>
+<!--Footer Starts-->
+<footer>
         <a href="#" class="logo"><i class="fas fa-newspaper"></i> MEMEws - Innovative Newsletter</a>
         <div class="social">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -125,7 +130,8 @@
             <a href="#"><i class="fab fa-linkedin-in"></i></a>
         </div>
     </footer>
-    
+<!--Footer Ends-->  
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="./app.js"></script>
 </body>
