--- a/src/tech.html
+++ b/src/tech.html
@@ -32,13 +32,13 @@
 <br>
 <br>
 <br> 
-<section class="text-gray-400 bg-gray-900 body-font overflow-hidden">
+<section class="text-gray-400 body-font overflow-hidden">
   <div class="container px-5 py-24 mx-auto">
     <div class="lg:w-4/5 mx-auto flex flex-wrap">
-      <img alt="ecommerce" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="https://pbs.twimg.com/media/Fi8s9azUYAAdARV?format=jpg&name=small">
+      <img alt="ecommerce" class="lg:w-1/4 w-half lg:h-auto h-64 object-cover object-center rounded" src="https://pbs.twimg.com/media/Fi8s9azUYAAdARV?format=jpg&name=small">
       <div class="lg:w-1/2 w-full lg:pl-10 lg:py-6 mt-6 lg:mt-0">
-        <h1 class="text-white text-3xl title-font font-medium mb-1">The Catcher in the Rye</h1><br><br>
-        <h2 style="text-align:left">Fam locavore kickstarter distillery. Mixtape chillwave tumeric sriracha taximy chia microdosing tilde DIY. <br>XOXO fam indxgo juiceramps cornhole raw denim forage brooklyn. Everyday carry +1 seitan poutine tumeric. Gastropub blue bottle austin listicle pour-over, neutra jean shorts keytar banjo tattooed umami cardigan.</h2>
+        <h1 class="text-white text-6xl title-font font-medium mb-1">The Catcher in the Rye</h1>
+        <p class="text-2xl py-6">Fam locavore kickstarter distillery. Mixtape chillwave tumeric sriracha taximy chia microdosing tilde DIY. XOXO fam indxgo juiceramps cornhole raw denim forage brooklyn. Everyday carry +1 seitan poutine tumeric. Gastropub blue bottle austin listicle pour-over, neutra jean shorts keytar banjo tattooed umami cardigan.</p>
         <div class="flex mt-6 items-center pb-5 border-b-2 border-gray-800 mb-5">
                  </div>
       </div>
@@ -47,11 +47,10 @@
 
   <div class="container px-5 py-24 mx-auto">
     <div class="lg:w-4/5 mx-auto flex flex-wrap">
-      <img alt="ecommerce" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="https://i.kym-cdn.com/photos/images/newsfeed/002/229/278/29d">
+      <img alt="ecommerce" class="lg:w-1/4 w-half lg:h-auto h-64 object-cover object-center rounded" src="https://i.kym-cdn.com/photos/images/newsfeed/002/229/278/29d">
       <div class="lg:w-1/2 w-full lg:pl-10 lg:py-6 mt-6 lg:mt-0">
-        <h2 class="text-sm title-font text-gray-500 tracking-widest">BRAND NAME</h2>
-        <h1 class="text-white text-3xl title-font font-medium mb-1">The Catcher in the Rye</h1>
-        <p class="leading-relaxed">Fam locavore kickstarter distillery. Mixtape chillwave tumeric sriracha taximy chia microdosing tilde DIY. XOXO fam indxgo juiceramps cornhole raw denim forage brooklyn. Everyday carry +1 seitan poutine tumeric. Gastropub blue bottle austin listicle pour-over, neutra jean shorts keytar banjo tattooed umami cardigan.</p>
+        <h1 class="text-white text-6xl title-font font-medium mb-1">The Catcher in the Rye</h1>
+        <p class="text-2xl py-6">Fam locavore kickstarter distillery. Mixtape chillwave tumeric sriracha taximy chia microdosing tilde DIY. XOXO fam indxgo juiceramps cornhole raw denim forage brooklyn. Everyday carry +1 seitan poutine tumeric. Gastropub blue bottle austin listicle pour-over, neutra jean shorts keytar banjo tattooed umami cardigan.</p>
         <div class="flex mt-6 items-center pb-5 border-b-2 border-gray-800 mb-5">
                  </div>
       </div>
