--- a/src/edu.html
+++ b/src/edu.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="index.html" >Home</a></li>
                 <li><a href="tech.html" >Technology</a></li>
-                <li><a href="edu.html" class="active">Education</a></li>
+                <li><a href="edu.html" class="active">Current Affairs</a></li>
                 <li><a href="pol.html">Politics</a></li>
                 <li><a href="sports.html">Sports</a></li>
                 <li><a href="opinion.html">Opinion</a></li>
@@ -32,47 +32,63 @@
 <br>
 <br>
 <br>
-    <section class="text-gray-400 body-font ">
-        <div class="tech-container container px-5 py-24 mx-auto">
-          <div class="flex flex-wrap -mx-4 -mb-10 text-center">
-            <div class="sm:w-1/2 mb-10 px-4">
-              <div class="rounded-lg h-64 overflow-hidden">
-                <img alt="content" class="object-cover object-center h-full w-full" src="https://dummyimage.com/1201x501">
-              </div>
-              <h2 class="title-font text-2xl font-medium text-white mt-6 mb-3">Buy YouTube Videos</h2>
-              <p class="leading-relaxed text-base">Williamsburg occupy sustainable snackwave gochujang. Pinterest cornhole brunch, slow-carb neutra irony.</p>
-              <button class="flex mx-auto mt-6 text-white bg-purple-500 border-0 py-2 px-5 focus:outline-none hover:bg-purple-600 rounded">Button</button>
-            </div>
-            <div class="sm:w-1/2 mb-10 px-4">
-              <div class="rounded-lg h-64 overflow-hidden">
-                <img alt="content" class="object-cover object-center h-full w-full" src="https://dummyimage.com/1202x502">
-              </div>
-              <h2 class="title-font text-2xl font-medium text-white mt-6 mb-3">The Catalyzer</h2>
-              <p class="leading-relaxed text-base">Williamsburg occupy sustainable snackwave gochujang. Pinterest cornhole brunch, slow-carb neutra irony.</p>
-              <button class="flex mx-auto mt-6 text-white bg-purple-500 border-0 py-2 px-5 focus:outline-none hover:bg-purple-600 rounded">Button</button>
-            </div>
-          </div>
-        </div>
-       <div class="flex flex-wrap -mx-4 -mb-10 text-center">
-            <div class="sm:w-1/2 mb-10 px-4">
-              <div class="rounded-lg h-64 overflow-hidden">
-                <img alt="content" class="object-cover object-center h-full w-full" src="https://dummyimage.com/1201x501">
-              </div>
-              <h2 class="title-font text-2xl font-medium text-white mt-6 mb-3">Buy YouTube Videos</h2>
-              <p class="leading-relaxed text-base">Williamsburg occupy sustainable snackwave gochujang. Pinterest cornhole brunch, slow-carb neutra irony.</p>
-              <button class="flex mx-auto mt-6 text-white bg-purple-500 border-0 py-2 px-5 focus:outline-none hover:bg-purple-600 rounded">Button</button>
-            </div>
-            <div class="sm:w-1/2 mb-10 px-4">
-              <div class="rounded-lg h-64 overflow-hidden">
-                <img alt="content" class="object-cover object-center h-full w-full" src="https://dummyimage.com/1202x502">
-              </div>
-              <h2 class="title-font text-2xl font-medium text-white mt-6 mb-3">The Catalyzer</h2>
-              <p class="leading-relaxed text-base">Williamsburg occupy sustainable snackwave gochujang. Pinterest cornhole brunch, slow-carb neutra irony.</p>
-              <button class="flex mx-auto mt-6 text-white bg-purple-500 border-0 py-2 px-5 focus:outline-none hover:bg-purple-600 rounded">Button</button>
-            </div>
-          </div>
-        </div>
-      </section>
+
+<main>
+  <div class="home">
+    <div class="tech-box-container">
+      <div class="image">
+        <img src="https://pbs.twimg.com/media/Fi8s9azUYAAdARV?format=jpg&name=small" alt=""/>
+      </div>
+      <div class="content">
+        <h3 class="headline">
+          Headline Headline Headline Headline
+        </h3>
+        <p class="desc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui tempore ipsam reiciendis illum, ratione accusantium doloribus veritatis earum voluptatum est dolorem! Illum reprehenderit sunt voluptatem perspiciatis sed ratione? Consectetur, hic.
+        </p>
+      </div>
+    </div>
+    <div class="tech-box-container">
+      <div class="image">
+        <img src="" alt=""/>
+      </div>
+      <div class="content">
+        <h3 class="headline">
+          Headline Headline Headline Headline
+        </h3>
+        <p class="desc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui tempore ipsam reiciendis illum, ratione accusantium doloribus veritatis earum voluptatum est dolorem! Illum reprehenderit sunt voluptatem perspiciatis sed ratione? Consectetur, hic.
+        </p>
+      </div>
+    </div>
+    <div class="tech-box-container">
+      <div class="image">
+        <img src="" alt=""/>
+      </div>
+      <div class="content">
+        <h3 class="headline">
+          Headline Headline Headline Headline
+        </h3>
+        <p class="desc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui tempore ipsam reiciendis illum, ratione accusantium doloribus veritatis earum voluptatum est dolorem! Illum reprehenderit sunt voluptatem perspiciatis sed ratione? Consectetur, hic.
+        </p>
+      </div>
+    </div>
+    <div class="tech-box-container">
+      <div class="image">
+        <img src="" alt=""/>
+      </div>
+      <div class="content">
+        <h3 class="headline">
+          Headline Headline Headline Headline
+        </h3>
+        <p class="desc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui tempore ipsam reiciendis illum, ratione accusantium doloribus veritatis earum voluptatum est dolorem! Illum reprehenderit sunt voluptatem perspiciatis sed ratione? Consectetur, hic.
+        </p>
+      </div>
+    </div>
+  </div>
+</main>
     
 <br>
 <br>
