--- a/src/opinion.html
+++ b/src/opinion.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="tech.html">Technology</a></li>
-                <li><a href="edu.html">Education</a></li>
+                <li><a href="edu.html">Current Affairs</a></li>
                 <li><a href="pol.html">Politics</a></li>
                 <li><a href="sports.html">Sports</a></li>
                 <li><a href="opinion.html" class="active">Opinion</a></li>
