--- a/src/tech.html
+++ b/src/tech.html
@@ -36,7 +36,7 @@
           <div class="image">
             <img src="https://pbs.twimg.com/media/Fi8s9azUYAAdARV?format=jpg&name=small" alt=""/>
           </div>
-          <div class="content">
+          <div class="tech-content">
             <h3 class="headline">
               Corporate America cuts thousands of jobs as recession looms
             </h3>
@@ -49,7 +49,7 @@
           <div class="image">
             <img src="https://i.kym-cdn.com/photos/images/newsfeed/002/229/278/29d" alt=""/>
           </div>
-          <div class="content">
+          <div class="tech-content">
             <h3 class="headline">
               Paradise at the Crypto Arcade: Inside the Web3 Revolution
             </h3>
@@ -62,7 +62,7 @@
           <div class="image">
             <img src="https://i.kym-cdn.com/photos/images/newsfeed/002/229/274/450.png" alt=""/>
           </div>
-          <div class="content">
+          <div class="tech-content">
             <h3 class="headline">
               Introducing Meta: A Social Technology Company
             </h3>
