--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
           </div>
           <div class="w-1/2 p-1 md:p-2">
             <img alt="gallery" class="hover:scale-125 transition-all duration-500 cursor-pointer"
-              src="https://i.pinimg.com/564x/66/41/70/664170d3554e7312f6cfdc88cfc4d712.jpg">
+              src="https://pbs.twimg.com/media/FjVChmvX0BM91A4?format=jpg&name=900x900">
           </div>
           <div class="w-full p-1 md:p-2">
             <img alt="gallery" class="hover:scale-125 transition-all duration-500 cursor-pointer"
